test-cases/negative/test_119_invalid_indentation.lay
# negative test: inconsistent indentation (should be handled gracefully)
# expected: parser should handle this or reject

if true then
 print 'hello'
  print 'world'
end if


